--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "django-bootstrap5>=25.1",
+    "django-filter>=25.1",
     "gunicorn>=23.0.0",
     "python-dotenv>=1.1.0",
     "ruff>=0.11.4",
