--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,14 @@ dependencies = [
     "django-filter>=25.1",
     "gunicorn>=23.0.0",
     "python-dotenv>=1.1.0",
+    "rollbar>=1.3.0",
     "ruff>=0.11.4",
     "whitenoise>=6.9.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["task_manager"]
