--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,19 @@ description = "Task manager"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "dj-database-url>=2.3.0",
     "django-bootstrap5>=25.1",
     "django-filter>=25.1",
     "gunicorn>=23.0.0",
+    "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
     "rollbar>=1.3.0",
-    "ruff>=0.11.4",
     "whitenoise>=6.9.0",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.6",
 ]
 
 [build-system]
